# patch-texton

./: CMakeLists.txt  main.cpp
experiment/3k5ptexton/: 3K5pExperimental data.txt
experiment/40k3pknn1/: 40K3pExperimental data.txt  classification assessment.txt
experiment/5k3ptexton/: 20K3pExperimental data.txt
experiment/60k9peuclid/: 60K9pExperimental data.txt  classification assessment.txt
source/: CMakeLists.txt  main.cpp
source/eval/: ClassificationError.cpp  ClassificationError.h  Evaluation.cpp  Evaluation.h
source/src/: ImgData.cpp  ImgData.h  PTexton.cpp  Ptexton.hpp  patchVector.hpp
src/: ImgData.cpp  ImgData.h  PTexton.cpp  Ptexton.hpp  Tools.hpp  patchVector.cpp
